thrift/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: thrift-demo-server
  name: thrift-demo-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: thrift-demo-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thrift-demo-server
    spec:
      containers:
      - image: tong16/thrift-example:v0.0.1
        args:
        - -server=true
        - -addr=0.0.0.0:9999
        imagePullPolicy: Always
        name: demo
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: thrift-demo-client
  name: thrift-demo-client
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: thrift-demo-client
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: thrift-demo-client
      annotations:
        # Override default stats inclusion prefixes to enable thrift stats.
        sidecar.istio.io/statsInclusionPrefixes: reporter=,component,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc,ssl_context_update_by_sds,thrift
    spec:
      containers:
      - image: tong16/thrift-example:v0.0.1
        args:
        - -server=true
        - -addr=0.0.0.0:9999
        imagePullPolicy: Always
        name: demo
        resources: {}
