thrift/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: thrift-demo-server
  name: thrift-demo-server
spec:
  ports:
  - port: 10005
    protocol: TCP
    targetPort: 9999
    # See https://istio.io/latest/docs/ops/configuration/traffic-management/protocol-selection/
    # Setting protocol to tcp, so istio will place envoy.tcp_proxy at the end of the filter chain.
    #name: tcp
    name: tcp-demo-server-ryan
  selector:
    app: thrift-demo-server
